# templates

python/: cookiecutter.json
python/hooks/: post_gen_project.sh
python/{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
python/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
