[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.github_username}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
target-version = ['py38']

line-length = 88
skip-string-normalization = true

include = '\.pyi?$'
exclude = '\/\..+$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

